<resources>
    <string name="app_name">XMLForm</string>

    <string name="form_title">Registro de usuario</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_surname">Apelldios</string>
    <string name="hint_height">Estatura</string>
    <string name="supporting_required">Obligatorio</string>
    <string name="btn_register">Registrar</string>

    <string name="error_min_height_valid">Estatura minima: 50cm</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title">Datos recolectados</string>
    <string name="dialog_clean">limpiar</string>
    <string name="birth_date">fecha de cumpleaños</string>
    <string name="section_ocupation">"Ocupacion: "</string>
    <string name="hint_notes">Notas</string>
    <string name="checkbox_agree">Acepto terminos y condiciones</string>
    <string name="from_invalid">Formulario incompleto revise los datos requeridos</string>

    <string name="profile_student">Estudiante</string>
    <string name="profile_developer">Programmeuse</string>
</resources>