<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/common_padding_default"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/form_title"
                style="?attr/textAppearanceTitleLarge"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTopSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:icon="@drawable/ic_check"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                tools:visibility="visible"
                android:visibility="invisible"
                />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:paddingTop="@dimen/common_padding_default"
                    app:startIconDrawable="@drawable/ic_person"
                    app:helperText="@string/supporting_required"
                    app:counterEnabled="true"
                    app:counterMaxLength="@integer/name_max_length"
                    android:nextClusterForward="@id/etSurname"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords"
                        android:imeOptions="actionNext"
                        android:maxLength="@integer/name_max_length"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_surname"
                    android:paddingTop="@dimen/common_padding_default"
                    app:startIconDrawable="@drawable/ic_person"
                    app:helperText="@string/supporting_required"
                    android:nextClusterForward="@id/etHeight"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords"
                        android:imeOptions="actionNext"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/common_padding_min"
                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfHeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:hint="@string/hint_height"
                        android:layout_marginEnd="@dimen/common_padding_min"
                        app:startIconDrawable="@drawable/ic_height"
                        app:helperText="@string/supporting_required"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etHeight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:imeOptions="actionDone"
                            android:maxLength="@integer/height_max_value"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfDate"
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:layout_height="wrap_content"
                        android:hint="@string/birth_date"
                        app:startIconDrawable="@drawable/ic_calendar"
                        app:helperText="@string/supporting_required"
                        android:layout_marginStart="@dimen/common_padding_min"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:clickable="true"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section_ocupation"
                    style="?attr/textAppearanceLabelLarge"
                    android:paddingTop="@dimen/common_padding_min"
                    />
                <RadioGroup
                    android:id="@+id/rgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rbStudent"
                    >
                    <RadioButton
                        android:id="@+id/rbStudent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_student"
                        android:paddingStart="@dimen/common_padding_default"
                        android:paddingEnd="@dimen/common_padding_none"
                        />
                    <RadioButton
                        android:id="@+id/rbDeveloper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_developer"
                        android:paddingStart="@dimen/common_padding_default"
                        android:paddingEnd="@dimen/common_padding_none"
                        />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_notes"
                    app:startIconDrawable="@drawable/ic_notes"
                    app:counterEnabled="true"
                    app:counterMaxLength="@integer/notes_max_length"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="@integer/notes_max_length"
                        android:inputType="textCapSentences|textMultiLine"
                        android:imeOptions="actionDone"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cbAgree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_agree"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBottomSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register"
                    app:icon="@drawable/ic_check"
                    app:iconGravity="textStart"
                    android:enabled="false"
                    android:layout_marginVertical="@dimen/common_padding_default"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progress_background"
        android:visibility="gone"
        android:clickable="true"
        >
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            />
    </FrameLayout>
</FrameLayout>